resources/11-nginx-ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: nginx-ingress
  namespace: nginx
spec:
  tls:
  - hosts:
    - nginx-example.com
    secretName: nginx-secret-tls
  rules:
  # Add more entries to the array for different domains or subdomains (one for each)
  - host: nginx-example.com
    http:
      paths:
      - path: '/'
        pathType: Prefix # or Exact
        backend:
          service:
            name: nginx-service
            port:
              # Either number or name
              name: nginx
              # number: 80
